[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cardiolab"
version = "0.2.4"
description = "HRV analysis toolkit — scientific core of the cardioanalysis platform"
authors = [{name = "Julien MILON", email = "julienmilon.devsecops@gmail.com"}]
readme = "README.md"
license = {file = "LICENCE"}
requires-python = ">=3.12"
keywords = [
    "hrv",
    "heart rate variability",
    "cardiology",
    "sports science",
    "rmssd",
    "autonomic nervous system",
    "physiology",
    "training load",
    "atl",
    "ctl",
    "tsb",
    "vo2max",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
]

[project.urls]
"Homepage"  = "https://gitlab.com/project-jmilon-devsecops/cardioanalysis/cardiolab"
"Source"    = "https://gitlab.com/project-jmilon-devsecops/cardioanalysis/cardiolab"
"Issues"    = "https://gitlab.com/project-jmilon-devsecops/cardioanalysis/cardiolab/-/issues"
"Changelog" = "https://gitlab.com/project-jmilon-devsecops/cardioanalysis/cardiolab/-/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "ruff",
    "python-dotenv",
]
analysis = [
    "pandas>=2.0",
    "jinja2>=3.0",
]
database = [
    "psycopg2-binary>=2.9",
]

[tool.hatch.build.targets.wheel]
packages = ["cardiolab"]

[tool.hatch.build.targets.sdist]
include = [
    "/cardiolab",
    "/tests",
    "/docs",
    "/example",
    "CHANGELOG.md",
    "LICENCE",
    "README.md",
    "pyproject.toml",
]

[tool.ruff]
# Version Python cible (pour les règles de modernisation)
target-version = "py312"

# Longueur de ligne (88 = défaut de Black)
line-length = 88

# Dossiers à ignorer
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
]

[tool.ruff.lint]
# Règle à activer
select = [
    "E",        # Erreur de style pycodestyle
    "F",        # EErreurs Pyflakes (variables, import non utilisés, etc)
    "I",        # Tri des imports (isort)
    "B",        # Bugs potentiels (flake8-bugbear)
    "UP",       # Modernisation syntaxe (pyupgrade)
    "SIM",      # Simplification possibles
    "D",        # Docstrings manquantes ou mal formatées
    "N",        # Convention de nommage
    "S",        # Problèmes de sécurité
]

# Règles à ignorer
ignore = [
    "E501",  # Ligne trop longue (géré par le formatter)
    "D203",  # Incompatible avec D211 (no-blank-line-before-class) — on garde D211
    "D213",  # Incompatible avec D212 (multi-line-summary-first-line) — on garde D212
]

# Règles ignorées par fichier
[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101"]  # assert is pytest's standard assertion mechanism
"*.ipynb" = ["E402", "F811"]  # notebooks : imports après docstring et réimports inter-cellules

# Règles que --fix peux corriger automatiquement
fixable = [
    "E",
    "F",
    "I",
    "UP",
    "D",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-ra", "--strict-markers", "--tb=short"]
markers = [
    "slow: tests longs (ex: simulation ECG réaliste)",
    "integration: tests d'intégration (nécessite PostgreSQL)",
    "unit: tests unitaires purs",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
    # Synthetic test recordings are intentionally short — the warning is expected.
    "ignore::cardiolab.signals.rr.PhysiologicalWarning",
    "ignore:Recording duration:cardiolab.signals.rr.PhysiologicalWarning",
    "ignore:interval.*below 300 ms:cardiolab.signals.rr.PhysiologicalWarning",
    "ignore:interval.*above 2000 ms:cardiolab.signals.rr.PhysiologicalWarning",
    # Complex multi-panel figures sometimes exceed tight_layout margins.
    "ignore:Tight layout not applied:UserWarning",
]

[tool.coverage.run]
source = ["cardiolab"]
omit = [
    "tests/*",
    "local/*",
    "example/*",
    "notebooks/*",
    "*/datasets/*",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]